[package]
name = "splits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
is_executable = "1.0.1"
itertools = "0.12.0"
nix = { version = "0.27.1", features = ["process", "signal"] }
rand = "0.8.5"
rayon = "1.8.1"
serde_json = "1.0.112"
sysinfo = "0.30.5"
wait-timeout = "0.2.0"
